--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
 
     <header class="page-header" role="banner">
 
-        <h1 class="project-name"><a class="header-title" href="https://ochakumi.github.io">ochakumi</a></h1>
+        <h1 class="project-name"><a class="header-title" href="https://www.ochakumi.com">ochakumi</a></h1>
         <h2 class="project-tagline">{{ page.description | default: site.description | default:
             site.github.project_tagline }}</h2>
         {% if site.github.is_project_page %}
