--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: " en-US" }}">
+<html lang="{{ site.lang | default: " ja-JP" }}">
 
 <head>
     <meta charset="UTF-8">
+
+    <link rel="icon" href="/favicon.ico">
 
     {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
